--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -49,7 +49,7 @@
 
 /* put your photo here--------------------->*/
 .home__img{
-    background: url(../../assets//profile.jpg); 
+    background: url(../../assets//profilephoto.jpg); 
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
